--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  firebase_core: ^1.12.0
+  cloud_firestore: ^3.1.9
+  firebase_auth: ^3.3.8
+  firebase_analytics: ^9.1.1
 
 dev_dependencies:
   flutter_test:
