--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   cloud_firestore: ^3.1.9
   firebase_auth: ^3.3.8
   firebase_analytics: ^9.1.1
+  flutter_svg: ^1.0.3
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
