--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
-dependencies:
+dependencies_overrides:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
