--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^2.0.13
   cloud_firestore: ^3.1.9
   flutter_timer_countdown: ^1.0.3
+  flutter_material_color_picker: ^1.1.0+2
 
 dev_dependencies:
   flutter_test:
